<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <TextView
        android:text="@string/subcategories"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="12dp"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:text="@string/go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/go"
        android:onClick="displayRandomCard"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radiogroup"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:text="@string/madness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:id="@+id/madness"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:text="@string/illness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:id="@+id/illness"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:text="@string/injury"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/injury"
            android:textSize="24sp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:text="@string/boon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/boon"
            android:textSize="24sp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:text="@string/talent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/talent"
            android:textSize="24sp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:text="@string/bane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:id="@+id/bane"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:text="@string/deal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:id="@+id/deal"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
</RelativeLayout>