<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_random_selection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <TextView
        android:text="@string/subcategories"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="12dp"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:checkedButton="@+id/any">

        <RadioButton
            android:text="@string/any_spell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:id="@+id/any"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:text="@string/rituals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:id="@+id/rituals"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:text="@string/incantations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/incantations"
            android:textSize="24sp"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:text="@string/glamours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/glamours"
            android:textSize="24sp"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <Button
        android:text="@string/go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/go"
        android:onClick="displayRandomSpell"/>


</RelativeLayout>