<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.primum.cept.eldritchhorrorcompanion.activities.CardMenuActivity">

   <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/es"
        android:id="@+id/bgImageView"
        android:cropToPadding="true"
        android:alpha="0.4" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:id="@+id/button1"
                android:layout_height="wrap_content"
                android:text="@string/spell_button"
                android:onClick="displayRandomSpell"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="match_parent"
                android:id="@+id/button2"
                android:layout_height="wrap_content"
                android:text="@string/asset_button"
                android:onClick="displayRandomAsset"
                android:layout_below="@+id/button1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:text="@string/artifact_button"
                android:onClick="displayRandomArtifact"
                android:layout_below="@+id/button2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button4"
                android:text="@string/unique_asset_button"
                android:onClick="displayRandomUniqueAsset"
                android:layout_below="@+id/button3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <Button
                android:text="@string/reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button5"
                android:onClick="resetDb"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </FrameLayout>
</RelativeLayout>
