<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.primum.cept.eldritchhorrorcompanion.activities.MainMenuActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/es"
        android:id="@+id/bgImageView"
        android:cropToPadding="true"
        android:alpha="0.4" />

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:text="@string/get_random_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:layout_above="@+id/button2"
                android:onClick="displayCardMenu" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:layout_above="@+id/button3"
                android:text="@string/get_ancient_one_card"
                android:onClick="displayAncientOneMenu" />

            <Button
                android:text="@string/get_character_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:id="@+id/button3"
                android:onClick="displayCharacterMenu" />

            <TextView
                android:text="@string/main_menu_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textStyle="normal|bold"
                android:textSize="30sp"
                android:fontFamily="cursive"
                android:textAlignment="center"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


        </RelativeLayout>
    </FrameLayout>
</RelativeLayout>
